--- a/Projeto-2-NB-Pedro_Luiz_Rafael_Libertini.ipynb
+++ b/Projeto-2-NB-Pedro_Luiz_Rafael_Libertini.ipynb
@@ -63,10 +63,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#imports \n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leitura dos arquivos em Excel\n",
+    "\n",
+    "nubank_treinamento = pd.read_excel('tweets_treinamento_p2.xlsx')\n",
+    "nu_treino_sim = nubank_treinamento[nubank_treinamento['Avaliacao'] == 'sim']\n",
+    "nu_treino_nao = nubank_treinamento[nubank_treinamento['Avaliacao'] == 'nao']\n",
+    "\n",
+    "nubank_teste = pd.read_excel('tweets_teste_p2.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Pedro/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/Users/Pedro/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:36: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Limpando as strings\n",
+    "\n",
+    "a = nu_treino_sim['Treinamento']\n",
+    "a = a.str.lower()\n",
+    "b = nu_treino_nao['Treinamento']\n",
+    "b = b.str.lower()\n",
+    "itens = ['.', ':', ';', '\"', \"'\", '?', '(', ')', '[',']',',', '\\n', '\\t']\n",
+    "i2 = ['?', '!']\n",
+    "for e in itens:\n",
+    "    a = a.str.replace(e,'')\n",
+    "    b = b.str.replace(e,'')\n",
+    "for e in i2:\n",
+    "    a = a.str.replace(e,' {}'.format(e))\n",
+    "    b = b.str.replace(e,' {}'.format(e))\n",
+    "    \n",
+    "a = a.str.replace('é','e')\n",
+    "b = b.str.replace('é','e')\n",
+    "a = a.str.replace('ê','e')\n",
+    "b = b.str.replace('ê','e')\n",
+    "a = a.str.replace('á','a')\n",
+    "b = b.str.replace('á','a')\n",
+    "a = a.str.replace('ã','a')\n",
+    "b = b.str.replace('ã','a')\n",
+    "a = a.str.replace('ô','o')\n",
+    "b = b.str.replace('ô','o')\n",
+    "a = a.str.replace('ó','o')\n",
+    "b = b.str.replace('ó','o')\n",
+    "a = a.str.replace('ú','u')\n",
+    "b = b.str.replace('ú','u')\n",
+    "a = a.str.replace('ç','c')\n",
+    "b = b.str.replace('ç','c')\n",
+    "a = a.str.replace('í','c')\n",
+    "b = b.str.replace('í','c')\n",
+    "\n",
+    "nu_treino_sim['Treinamento'] = a\n",
+    "nu_treino_nao['Treinamento'] = b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Separando as palavras e criando DataFrame de probabilidades\n",
+    "\n",
+    "a = nu_treino_sim['Treinamento'].str.split(' ')\n",
+    "b = nu_treino_nao['Treinamento'].str.split(' ')\n",
+    "\n",
+    "treino_sim = pd.DataFrame()\n",
+    "treino_sim['palavras'] = []\n",
+    "\n",
+    "treino_nao = pd.DataFrame()\n",
+    "treino_nao['palavras'] = []\n",
+    "\n",
+    "for lista in a:\n",
+    "    for palavra in lista:\n",
+    "        if palavra == '' or palavra[:4] == 'http':\n",
+    "            lista.remove(palavra)\n",
+    "    for e in lista:\n",
+    "        treino_sim = treino_sim.append({'palavras': e}, ignore_index=True)\n",
+    "        \n",
+    "for lista in b:\n",
+    "    for palavra in lista:\n",
+    "        if palavra == '' or palavra[:4] == 'http':\n",
+    "            lista.remove(palavra)\n",
+    "    for e in lista:\n",
+    "        treino_nao = treino_nao.append({'palavras': e}, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.021129326047358836"
+      ]
+     },
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "treino_nao['palavras'].value_counts()['o']/len(treino_nao['palavras'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,6 +217,13 @@
     "Obrigatório para grupos de 3 alunos:\n",
     "* Criar categorias intermediárias de relevância baseado na diferença de probabilidades. Exemplo: muito relevante, relevante, neutro, irrelevante e muito irrelevante."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
