programa com funcoes

--- a/Projeto-2-NB-Pedro_Luiz_Rafael_Libertini.ipynb
+++ b/Projeto-2-NB-Pedro_Luiz_Rafael_Libertini.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 553,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,19 +88,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 563,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def limpar_caracteres(tabela, titulo):\n",
+    "    a = tabela[titulo]\n",
+    "    a = a.str.lower()\n",
+    "\n",
+    "    itens = ['.', ':', ';', '\"', \"'\", '?', '(', ')', '[',']',',', '\\n', '\\t']\n",
+    "    i2 = ['?', '!']\n",
+    "    for e in itens:\n",
+    "        a = a.str.replace(e,'')\n",
+    "    for e in i2:\n",
+    "        a = a.str.replace(e,' {} '.format(e))\n",
+    "\n",
+    "    a = a.str.replace('é','e')\n",
+    "    a = a.str.replace('ê','e')\n",
+    "    a = a.str.replace('á','a')\n",
+    "    a = a.str.replace('ã','a')\n",
+    "    a = a.str.replace('ô','o')\n",
+    "    a = a.str.replace('ó','o')\n",
+    "    a = a.str.replace('ú','u')\n",
+    "    a = a.str.replace('ç','c')\n",
+    "    a = a.str.replace('í','i')\n",
+    "    a = a.str.replace('@',' @')\n",
+    "        \n",
+    "    tabela[titulo] = a\n",
+    "\n",
+    "    return tabela\n",
+    "\n",
+    "def split_tweet(tabela, titulo):\n",
+    "    a = tabela[titulo].str.split(' ')\n",
+    "\n",
+    "    nova = pd.DataFrame()\n",
+    "    nova['palavras'] = []\n",
+    "\n",
+    "    for lista in a:\n",
+    "        for e in ['' , ' ']:\n",
+    "            while lista.count(e) != 0:\n",
+    "                lista.remove(e)\n",
+    "\n",
+    "        for palavra in lista:\n",
+    "            if palavra[:4] == 'http':\n",
+    "                lista.remove(palavra)\n",
+    "        nova = nova.append({'palavras': lista}, ignore_index=True)\n",
+    "                \n",
+    "    return nova\n",
+    "\n",
+    "def tabela_probabilidades(tabela):\n",
+    "    a = tabela['palavras']\n",
+    "    prob = pd.DataFrame()\n",
+    "    prob['palavras'] = []\n",
+    "    for lista in a:\n",
+    "        for e in lista:\n",
+    "            prob = prob.append({'palavras': e}, ignore_index=True)\n",
+    "    \n",
+    "    return prob['palavras'].value_counts(normalize=True)\n",
+    "\n",
+    "def tabela_tudo(tabela1, tabela2):\n",
+    "    a = tabela1['palavras']\n",
+    "    b = tabela2['palavras']\n",
+    "    tudo = pd.DataFrame()\n",
+    "    tudo['palavras'] = []\n",
+    "    for lista in a:\n",
+    "        for e in lista:\n",
+    "            tudo = tudo.append({'palavras': e}, ignore_index=True)\n",
+    "    for lista in b:\n",
+    "        for e in lista:\n",
+    "            tudo = tudo.append({'palavras': e}, ignore_index=True)\n",
+    "    \n",
+    "    return tudo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 557,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Pedro/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/Users/Pedro/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:36: SettingWithCopyWarning: \n",
+      "/Users/Pedro/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -109,94 +179,36 @@
     }
    ],
    "source": [
-    "#Limpando as strings\n",
-    "\n",
-    "a = nu_treino_sim['Treinamento']\n",
-    "a = a.str.lower()\n",
-    "b = nu_treino_nao['Treinamento']\n",
-    "b = b.str.lower()\n",
-    "itens = ['.', ':', ';', '\"', \"'\", '?', '(', ')', '[',']',',', '\\n', '\\t']\n",
-    "i2 = ['?', '!']\n",
-    "for e in itens:\n",
-    "    a = a.str.replace(e,'')\n",
-    "    b = b.str.replace(e,'')\n",
-    "for e in i2:\n",
-    "    a = a.str.replace(e,' {}'.format(e))\n",
-    "    b = b.str.replace(e,' {}'.format(e))\n",
-    "    \n",
-    "a = a.str.replace('é','e')\n",
-    "b = b.str.replace('é','e')\n",
-    "a = a.str.replace('ê','e')\n",
-    "b = b.str.replace('ê','e')\n",
-    "a = a.str.replace('á','a')\n",
-    "b = b.str.replace('á','a')\n",
-    "a = a.str.replace('ã','a')\n",
-    "b = b.str.replace('ã','a')\n",
-    "a = a.str.replace('ô','o')\n",
-    "b = b.str.replace('ô','o')\n",
-    "a = a.str.replace('ó','o')\n",
-    "b = b.str.replace('ó','o')\n",
-    "a = a.str.replace('ú','u')\n",
-    "b = b.str.replace('ú','u')\n",
-    "a = a.str.replace('ç','c')\n",
-    "b = b.str.replace('ç','c')\n",
-    "a = a.str.replace('í','c')\n",
-    "b = b.str.replace('í','c')\n",
-    "\n",
-    "nu_treino_sim['Treinamento'] = a\n",
-    "nu_treino_nao['Treinamento'] = b"
+    "prob_sim = tabela_probabilidades(split_tweet(limpar_caracteres(nu_treino_sim, 'Treinamento'), 'Treinamento'))\n",
+    "prob_nao = tabela_probabilidades(split_tweet(limpar_caracteres(nu_treino_nao, 'Treinamento'), 'Treinamento'))\n",
+    "teste = split_tweet(limpar_caracteres(nubank_teste, 'Teste'), 'Teste')\n",
+    "tudo = tabela_tudo(split_tweet(limpar_caracteres(nu_treino_sim, 'Treinamento'), 'Treinamento'),split_tweet(limpar_caracteres(nu_treino_nao, 'Treinamento'), 'Treinamento'))\n",
+    "total_palavras = len(tudo['palavras'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Separando as palavras e criando DataFrame de probabilidades\n",
-    "\n",
-    "a = nu_treino_sim['Treinamento'].str.split(' ')\n",
-    "b = nu_treino_nao['Treinamento'].str.split(' ')\n",
-    "\n",
-    "treino_sim = pd.DataFrame()\n",
-    "treino_sim['palavras'] = []\n",
-    "\n",
-    "treino_nao = pd.DataFrame()\n",
-    "treino_nao['palavras'] = []\n",
-    "\n",
-    "for lista in a:\n",
-    "    for palavra in lista:\n",
-    "        if palavra == '' or palavra[:4] == 'http':\n",
-    "            lista.remove(palavra)\n",
-    "    for e in lista:\n",
-    "        treino_sim = treino_sim.append({'palavras': e}, ignore_index=True)\n",
-    "        \n",
-    "for lista in b:\n",
-    "    for palavra in lista:\n",
-    "        if palavra == '' or palavra[:4] == 'http':\n",
-    "            lista.remove(palavra)\n",
-    "    for e in lista:\n",
-    "        treino_nao = treino_nao.append({'palavras': e}, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.021129326047358836"
+       "0.029143897996357013"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "treino_nao['palavras'].value_counts()['o']/len(treino_nao['palavras'])"
+    "psim = treino_sim['palavras'].value_counts(normalize=True)\n",
+    "pnao = treino_nao['palavras'].value_counts(normalize=True)\n",
+    "\n",
+    "p(tweet|sim)*p(sim) - comparar - p(tweet|nao)*p(nao)\n",
+    "\n",
+    "(psim[palavra] + 1/tudo)"
    ]
   },
   {
