--- a/Projeto-2-NB-Pedro_Luiz_Rafael_Libertini.ipynb
+++ b/Projeto-2-NB-Pedro_Luiz_Rafael_Libertini.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 571,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +82,12 @@
     "nubank_treinamento = pd.read_excel('tweets_treinamento_p2.xlsx')\n",
     "nu_treino_sim = nubank_treinamento[nubank_treinamento['Avaliacao'] == 'sim']\n",
     "nu_treino_nao = nubank_treinamento[nubank_treinamento['Avaliacao'] == 'nao']\n",
-    "\n",
     "nubank_teste = pd.read_excel('tweets_teste_p2.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 572,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 573,
    "metadata": {},
    "outputs": [
     {
@@ -182,33 +181,9 @@
     "prob_sim = tabela_probabilidades(split_tweet(limpar_caracteres(nu_treino_sim, 'Treinamento'), 'Treinamento'))\n",
     "prob_nao = tabela_probabilidades(split_tweet(limpar_caracteres(nu_treino_nao, 'Treinamento'), 'Treinamento'))\n",
     "teste = split_tweet(limpar_caracteres(nubank_teste, 'Teste'), 'Teste')\n",
+    "teste = teste.join(nubank_teste['Avaliacao'])\n",
     "tudo = tabela_tudo(split_tweet(limpar_caracteres(nu_treino_sim, 'Treinamento'), 'Treinamento'),split_tweet(limpar_caracteres(nu_treino_nao, 'Treinamento'), 'Treinamento'))\n",
     "total_palavras = len(tudo['palavras'].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 347,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.029143897996357013"
-      ]
-     },
-     "execution_count": 347,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "psim = treino_sim['palavras'].value_counts(normalize=True)\n",
-    "pnao = treino_nao['palavras'].value_counts(normalize=True)\n",
-    "\n",
-    "p(tweet|sim)*p(sim) - comparar - p(tweet|nao)*p(nao)\n",
-    "\n",
-    "(psim[palavra] + 1/tudo)"
    ]
   },
   {
@@ -235,16 +210,440 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def naive_bayes(prob_sim, prob_nao, teste):\n",
+    "for linha in teste:\n",
+    "    p_sim = 1\n",
+    "    p_nao = 1\n",
+    "    for palavra in linha:\n",
+    "        p_sim *= prob_sim[palavra] + 1/total_palavras\n",
+    "        p_nao *= prob_nao[palavra] + 1/total_palavras\n",
+    "    \n",
+    "        \n",
+    "        \n",
+    "p(tweet|sim)*p(sim) - comparar - p(tweet|nao)*p(nao)\n",
+    "\n",
+    "(psim[palavra] + 1/total_palavras + ... +)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 574,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>palavras</th>\n",
+       "      <th>Avaliacao</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[queria, saber, pq, digio, e, nubank, investem...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[@samuelbruno47, ainda, nao, temos, previsao, ...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[@jordaanzzzz, opa, fica, tranquilo, !, chama,...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[chegou, meu, @nubank, agora, #sounu, 💜]</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[@gaabrielacam1, imagina, !, 💜, que, bom, que,...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>[@nubank, pelo, app, ando, mal, sucedido, tamb...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>[@nubank, berro, com, o, nome, da, playlist]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>[nada, como, ter, que, ligar, 17, dezessete, !...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>[nao, to, conseguindo, pagar, minha, fatura, d...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>[@lucascaliman, no, app, vc, pode, simular, qu...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>[@nubank, incluam, o, playstation, no, rewards...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>[@jr_colosso, agradecemos, pela, sugestao, do,...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>[@nubank, quando, vamos, ter, direito, a, algu...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>[@dumisedo, @nubank, deixa, eu, testar, @nuban...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>[agora, sou, nu, meu, roxinho, chegou, obrigad...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>[o, ponto, alto, do, meu, dia, esta, sendo, se...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>[pra, ficar, nu, 😏]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>[@eita_cremosa, e, que, nao, conseguimos, mesm...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>[e, eu, que, esqueci, o, nubank, do, meu, irma...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>[@batshites, nos, agradecemos, seu, interesse,...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>[amigos, do, @nubank, sempre, respondo, as, su...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>[so, falta, o, mozao, 💔😪]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>[nao, sou, o, unico, a, achar, que, ja, passou...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>[@nubank, amosou, !, 💜]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>[@bysandracosta, @nubank, e, ai, @nubank, vamo...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>[kkkkkkkkkkk, amei]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>[o, app, da, nubank, era, uma, maravilha, ai, ...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>[@gabepavao, mas, nem, um, contatinho, bb, a, ...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>[@nubank, seria, um, otimo, presente, de, aniv...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>[rt, @nubank, @viniisandrini, belinha, pleninh...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>[@otaldoromulo, nao, temos, previsao, de, qnd,...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>[tenho, alguns, exemplos, de, atendimento, imp...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>[nao, acredito, que, e, a, esse, povo, que, eu...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>[@_flavinhandrade, @nubank, vou, olhar, aq, va...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>[@ialemagalhaes, opa, !, ainda, nao, temos, pr...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>[rt, @nubank, @felipesandrini7, @dumisedo, awn...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>[@blueharmonizer, oie, !, 💜, chama, a, gente, ...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>[tendo, que, andar, com, outro, cartao, na, ca...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>[rt, @diggimonia, @wtfmiu, nao, acredito, que,...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>[@nubank, a, @, eu, nao, sei, mas, a, minha, 🖐...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>[@bradesco, so, queria, antecipar, o, pagament...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>[@blogestante, estamos, sempre, em, busca, de,...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>[@nubank, aaaaaaaaaa, melhor, gif, amei, o, tw...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>[@_hatunamatata_, pra, esbanjar, sensualidade, 😜]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>[@bjdaglai, quem, discorda, paga, meu, nubank, !]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>[@nubank, @jacksjackss, vou, mesmo, ❤]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>[@nubank, faltou, um, musica, nossa, kkk]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>[eu, so, queria, que, o, nubank, aumentasse, m...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>[@keeleferreira, pois, quero, !, !, oi, @nuban...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>[@nubank, so, falta, a, companhia, agora, !]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>[@nubank, @_ce_rejinha, bis, branco, estalando...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>[@noctturna, o, tempo, para, resposta, aqui, n...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>[@nubank, fazendo, playlist, pra, hora, do, se...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>[@nubank, obrigado, ja, estou, ficando, bem]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>[@nubank, usuario, deezer, e, sem, ninguem, pr...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>[o, @nubank, fez, uma, playlist, pro, #diadose...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>[@exallax, @nubank, assim, podemos, conhecer, ...</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>[muita, vontade, de, mandar, um, foda-se, no, ...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>[isso, que, eu, chamo, de, branding, e, market...</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>[@lsarmiliato, opa, logo, logo, ele, vira, lu, !]</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              palavras Avaliacao\n",
+       "0    [queria, saber, pq, digio, e, nubank, investem...       sim\n",
+       "1    [@samuelbruno47, ainda, nao, temos, previsao, ...       nao\n",
+       "2    [@jordaanzzzz, opa, fica, tranquilo, !, chama,...       nao\n",
+       "3             [chegou, meu, @nubank, agora, #sounu, 💜]       sim\n",
+       "4    [@gaabrielacam1, imagina, !, 💜, que, bom, que,...       nao\n",
+       "5    [@nubank, pelo, app, ando, mal, sucedido, tamb...       nao\n",
+       "6         [@nubank, berro, com, o, nome, da, playlist]       nao\n",
+       "7    [nada, como, ter, que, ligar, 17, dezessete, !...       sim\n",
+       "8    [nao, to, conseguindo, pagar, minha, fatura, d...       sim\n",
+       "9    [@lucascaliman, no, app, vc, pode, simular, qu...       nao\n",
+       "10   [@nubank, incluam, o, playstation, no, rewards...       nao\n",
+       "11   [@jr_colosso, agradecemos, pela, sugestao, do,...       nao\n",
+       "12   [@nubank, quando, vamos, ter, direito, a, algu...       sim\n",
+       "13   [@dumisedo, @nubank, deixa, eu, testar, @nuban...       nao\n",
+       "14   [agora, sou, nu, meu, roxinho, chegou, obrigad...       sim\n",
+       "15   [o, ponto, alto, do, meu, dia, esta, sendo, se...       sim\n",
+       "16                                 [pra, ficar, nu, 😏]       nao\n",
+       "17   [@eita_cremosa, e, que, nao, conseguimos, mesm...       nao\n",
+       "18   [e, eu, que, esqueci, o, nubank, do, meu, irma...       nao\n",
+       "19   [@batshites, nos, agradecemos, seu, interesse,...       nao\n",
+       "20   [amigos, do, @nubank, sempre, respondo, as, su...       nao\n",
+       "21                           [so, falta, o, mozao, 💔😪]       nao\n",
+       "22   [nao, sou, o, unico, a, achar, que, ja, passou...       nao\n",
+       "23                             [@nubank, amosou, !, 💜]       nao\n",
+       "24   [@bysandracosta, @nubank, e, ai, @nubank, vamo...       nao\n",
+       "25                                 [kkkkkkkkkkk, amei]       nao\n",
+       "26   [o, app, da, nubank, era, uma, maravilha, ai, ...       sim\n",
+       "27   [@gabepavao, mas, nem, um, contatinho, bb, a, ...       nao\n",
+       "28   [@nubank, seria, um, otimo, presente, de, aniv...       nao\n",
+       "29   [rt, @nubank, @viniisandrini, belinha, pleninh...       nao\n",
+       "..                                                 ...       ...\n",
+       "170  [@otaldoromulo, nao, temos, previsao, de, qnd,...       nao\n",
+       "171  [tenho, alguns, exemplos, de, atendimento, imp...       sim\n",
+       "172  [nao, acredito, que, e, a, esse, povo, que, eu...       nao\n",
+       "173  [@_flavinhandrade, @nubank, vou, olhar, aq, va...       nao\n",
+       "174  [@ialemagalhaes, opa, !, ainda, nao, temos, pr...       nao\n",
+       "175  [rt, @nubank, @felipesandrini7, @dumisedo, awn...       nao\n",
+       "176  [@blueharmonizer, oie, !, 💜, chama, a, gente, ...       nao\n",
+       "177  [tendo, que, andar, com, outro, cartao, na, ca...       sim\n",
+       "178  [rt, @diggimonia, @wtfmiu, nao, acredito, que,...       nao\n",
+       "179  [@nubank, a, @, eu, nao, sei, mas, a, minha, 🖐...       nao\n",
+       "180  [@bradesco, so, queria, antecipar, o, pagament...       sim\n",
+       "181  [@blogestante, estamos, sempre, em, busca, de,...       nao\n",
+       "182  [@nubank, aaaaaaaaaa, melhor, gif, amei, o, tw...       nao\n",
+       "183  [@_hatunamatata_, pra, esbanjar, sensualidade, 😜]       nao\n",
+       "184  [@bjdaglai, quem, discorda, paga, meu, nubank, !]       nao\n",
+       "185             [@nubank, @jacksjackss, vou, mesmo, ❤]       nao\n",
+       "186          [@nubank, faltou, um, musica, nossa, kkk]       nao\n",
+       "187  [eu, so, queria, que, o, nubank, aumentasse, m...       sim\n",
+       "188  [@keeleferreira, pois, quero, !, !, oi, @nuban...       nao\n",
+       "189       [@nubank, so, falta, a, companhia, agora, !]       nao\n",
+       "190  [@nubank, @_ce_rejinha, bis, branco, estalando...       nao\n",
+       "191  [@noctturna, o, tempo, para, resposta, aqui, n...       nao\n",
+       "192  [@nubank, fazendo, playlist, pra, hora, do, se...       nao\n",
+       "193       [@nubank, obrigado, ja, estou, ficando, bem]       nao\n",
+       "194  [@nubank, usuario, deezer, e, sem, ninguem, pr...       nao\n",
+       "195  [o, @nubank, fez, uma, playlist, pro, #diadose...       nao\n",
+       "196  [@exallax, @nubank, assim, podemos, conhecer, ...       nao\n",
+       "197  [muita, vontade, de, mandar, um, foda-se, no, ...       sim\n",
+       "198  [isso, que, eu, chamo, de, branding, e, market...       sim\n",
+       "199  [@lsarmiliato, opa, logo, logo, ele, vira, lu, !]       nao\n",
+       "\n",
+       "[200 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 574,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teste"
+   ]
   },
   {
    "cell_type": "markdown",
